@@ -41,18 +41,23 @@ public final class MidxPackList {
 	 *            list of packs (regular or tip midxs)
 	 * @return a MidxPackList instance
 	 */
-	public static MidxPackList create(DfsPackFile[] packs) {
-		return new MidxPackList(packs);
+	public static MidxPackList create(DfsPackFile... packs) {
+		return new MidxPackList(Arrays.asList(packs));
 	}
 
 	private final List<DfsPackFile> packs;
 
-	private MidxPackList(DfsPackFile[] packs) {
-		this.packs = Arrays.asList(packs);
+	private MidxPackList(List<DfsPackFile> packs) {
+		this.packs = packs;
 	}
 
 	/**
 	 * Get all plain packs in the list, either top-level or inside midxs
+	 * <p>
+	 * Inside midx, the packs are in reverse lookup order. This code restores
+	 * their original order. i.e. the list with packs [INSERT, midx(COMPACT-2,
+	 * COMPACT-3), midx(GC, COMPACT-1)] becomes [INSERT, COMPACT-3, COMPACT-2,
+	 * COMPACT-1, GC].
 	 *
 	 * @return a list of all "real" packs in this pack list, either top level or
 	 *         inside midxs.
@@ -63,7 +68,11 @@ public final class MidxPackList {
 		while (!pending.isEmpty()) {
 			DfsPackFile pack = pending.poll();
 			if (pack instanceof DfsPackFileMidx midxPack) {
-				plainPacks.addAll(midxPack.getCoveredPacks());
+				// Midx order is the reverse of object lookup order
+				ArrayList<DfsPackFile> coveredPacks = new ArrayList<>(
+						midxPack.getCoveredPacks());
+				Collections.reverse(coveredPacks);
+				plainPacks.addAll(coveredPacks);
 				if (midxPack.getMultipackIndexBase() != null) {
 					pending.add(midxPack.getMultipackIndexBase());
 				}
@@ -104,8 +113,8 @@ public final class MidxPackList {
 	 *            a single pack
 	 * @return all the midxs that include (directly or indirectly) the pack
 	 */
-	Set<DfsPackFileMidx> findAllCoveringMidxs(DfsPackFile pack) {
-		return findAllCoveringMidxs(List.of(pack));
+	Set<DfsPackFileMidx> findAllCoveringMidxs(DfsPackFile... pack) {
+		return findAllCoveringMidxs(Arrays.asList(pack));
 	}
 
 	/**
